# spo-hw

./: .gitignore  CMakeLists.txt  MyLang.tokens  README.md  main.c  run_asm.sh
RemoteTasks/: Portable.RemoteTasks.Manager.exeZone.Identifier
arch/: myLang.target.pdsl
ast/: ast.c  ast.h
compiler/: asm.c  asm.h  compiler.c  compiler.h  lib.c  lib.h
graph/: graph.c  graph.h  graphForExternal.h  graphStructures.h  misc.h
hw1/: CMakeLists.txt  MyLang.g  MyLang.tokens  MyLangLexer.c  MyLangLexer.h  MyLangParser.c  MyLangParser.h  ast.c  ast.h  input.txt  main.c
ir/: errors.c  errors.h  ir.c  ir.h
lab1/: CMakeLists.txt  Lab1.c
lab1/lib/lang/: AwesomeLang.g  AwesomeLang.tokens  AwesomeLangLexer.c  AwesomeLangLexer.h  AwesomeLangParser.c  AwesomeLangParser.h
lang/: MyLang.g  MyLang.tokens  MyLangLexer.c  MyLangLexer.h  MyLangParser.c  MyLangParser.h
types/: errors.c  errors.h  typization.c  typization.h  utils.c  utils.h
